Fix `circle` element display on Firefox

--- a/docs/src/index.scss
+++ b/docs/src/index.scss
@@ -121,7 +121,6 @@ h1 {
   transform-origin: center;
 
   &-circle {
-    r: 30;
     cx: 50%;
     cy: 50%;
   }
